Fix: vertical align of th and td to middle

--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@
   border-top: 1px solid #dee2e6;
 }
 
+td {
+  vertical-align: center;
+}
+
 .table thead th {
   vertical-align: bottom;
   border-bottom: 2px solid #dee2e6;
